--- a/buhkas465-wfo2401-groupb-buhlekasa-djs11/index.html
+++ b/buhkas465-wfo2401-groupb-buhlekasa-djs11/index.html
@@ -3,7 +3,7 @@
   <head>
    
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./public/podcast.png" />
+    <link rel="icon" type="image/png" href="podcast.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" src="index.css" />
     <title></title>
